<resources>
    <string name="app_name">PawPoint</string>
    <string name="msg1">Зареєструватися</string>
    <string name="msg2">Увійти</string>
    <string name="msg3">Ім\'я користувача</string>
    <string name="msg4">Пароль</string>
    <string name="msg5">Забули пароль?</string>
    <string name="msg6">Електронна пошта</string>
    <string name="msg7">Стать</string>
    <string name="msg8">Регіон</string>
    <string name="msg9">Особиста інформація</string>
    <string name="msg10">Налаштування системи</string>
    <string name="msg11">Змінити мову на Українську</string>
    <string name="msg112">Змінити мову на Англійську</string>
    <string name="msg12">Вийти</string>
    <string name="hello_blank_fragment">Привіт, порожній фрагмент</string>
    <string name="msg13">Пошук</string>
    <string name="msg14">Скинути</string>
    <string name="msg15">Сортувати</string>
    <string name="msg16">Оцінка</string>
    <string name="msg17">Усі</string>
    <string name="msg18">Лікарня</string>
    <string name="msg19">Кафе</string>
    <string name="msg20">Спортзал</string>
    <string name="msg21">Салон</string>
    <string name="msg22">Ім\'я</string>
    <string name="msg23">Вид</string>
    <string name="msg24">id</string>
    <string name="msg25">0,0</string>
    <string name="msg26">Сповіщення</string>
    <string name="msg27">Поставити оцінку</string>
    <string name="msg28">Опис</string>
    <string name="msg29">URL веб-сайту</string>
    <string name="msg30">Номер телефону</string>
    <string name="msg31">Адреса</string>
    <string name="msg32">Розташування</string>
    <string name="msg33">Засоби</string>
    <string name="msg34">0 °C</string>
    <string name="msg35">Поточне місцезнаходження</string>
    <string name="msg36">Дата народження</string>
    <string name="msg37">Характеристики</string>
    <string name="msg38">Порода</string>
    <string name="msg39">Вага</string>
    <string name="msg40">Висота</string>
    <string name="msg41">Хвороби</string>
    <string name="msg42">Вподобання</string>
    <string name="msg43">Перейти до нотаток щоденника</string>
    <string name="msg44">Записи про стан здоров\'я</string>
    <string name="msg45">Нікнейм</string>
    <string name="msg46">Введіть назву</string>
    <string name="msg47">Введіть коментар</string>
    <string name="msg48">Нотатки щоденника</string>
    <string name="msg49">Дата</string>
    <string name="msg50">Назва</string>
    <string name="msg51">Останнє оновлення</string>
    <string name="msg52">Отримати поточну температуру</string>
    <string name="msg53">Отримати поточне місцезнаходження</string>
    <string name="msg54">Документи</string>
    <string name="msg55">Оновити профіль</string>
    <string name="msg56">Оновити</string>
    <string name="profile_nav">Профіль</string>
    <string name="institutions_nav">Заклади</string>
    <string name="pets_nav">Тварини</string>
    <string name="notifications_nav">Повідомлення</string>
</resources>
