<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.PetInfo">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/alata"
        android:text="@string/msg45"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/alata"
        android:text="@string/msg23"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/currentTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/alata"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/currentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/alata"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/getCurrentTemp"
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/alata"
            android:text="@string/msg52"
            android:textColor="@color/purple"
            android:textSize="12sp" />

        <Button
            android:id="@+id/getCurrentLocation"
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/alata"
            android:text="@string/msg53"
            android:textColor="@color/purple"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/dateOfBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/alata"
        android:text="@string/msg36"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/charact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/alata"
        android:text="@string/msg37"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/breed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/alata"
        android:text="@string/msg38"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/alata"
        android:text="@string/msg39"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/alata"
        android:text="@string/msg40"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/illnesses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/alata"
        android:text="@string/msg41"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/pref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/alata"
        android:text="@string/msg42"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/notesButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/alata"
        android:text="@string/msg43"
        android:textColor="@color/purple"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/light_purple2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:lines="1"
                android:text="@string/msg44"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:isScrollContainer="true"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                android:scrollbarAlwaysDrawVerticalTrack="true">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp" />
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</LinearLayout>
