<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.DiaryNotesPage">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/alata"
        android:text="@string/msg45"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/alata"
        android:text="@string/msg23"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/title"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:hint="@string/msg46"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/comment"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/alata"
            android:hint="@string/msg47"
            android:inputType="text"
            android:lines="3"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <ImageButton
            android:id="@+id/addNoteButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:background="@color/white"
            android:contentDescription="@string/msg27"
            android:scaleType="fitCenter"
            android:src="@drawable/note_icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/light_purple2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:lines="1"
                android:text="@string/msg48"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:isScrollContainer="true"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                android:scrollbarAlwaysDrawVerticalTrack="true">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp" />
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</LinearLayout>
