<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.ProfileUserPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:background="@color/light_purple2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata"
                    android:lines="1"
                    android:text="@string/msg9"
                    android:textColor="@color/light_grey"
                    android:textSize="17sp" />

                <ImageButton
                    android:id="@+id/editUserButton"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_icon"
                    app:cornerRadius="28dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/alata"
                android:lines="1"
                android:text="@string/msg3"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/alata"
                android:lines="1"
                android:text="@string/msg6"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/regionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/alata"
                android:lines="1"
                android:text="@string/msg8"
                android:textColor="@color/black"
                android:textSize="19sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/light_purple2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata"
                    android:lines="1"
                    android:text="@string/msg10"
                    android:textColor="@color/light_grey"
                    android:textSize="17sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/alata"
                android:lines="1"
                android:text="@string/msg112"
                android:textColor="@color/black"
                android:textSize="19sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/light_purple2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/singOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/alata"
                android:lines="1"
                android:text="@string/msg12"
                android:textColor="@color/red"
                android:textSize="19sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/light_green"
            android:orientation="vertical"></LinearLayout>
    </LinearLayout>
</FrameLayout>
